# zendesk-mle

./: .dockerignore  .gitignore  Dockerfile.inference  Dockerfile.training  README.md  RUN_DOCKER_INFERENCE.sh  RUN_DOCKER_TRAINING.sh  entrypoint.sh  intent_classifier_streamlit.py  requirements.txt
coding_task/: README.md  constants.py  logging_utils.py  pyproject.toml  requirements.txt
coding_task/code_tests/: atis_data_utils_test.py
coding_task/data/: utils.py
coding_task/evaluation/: README.md  analysis.py  pyproject.toml
coding_task/evaluation/plots/: eda_analysis_results_test.txt  eda_analysis_results_train.txt
coding_task/inference/: config.py  main.py  predictor.py  pyproject.toml  run_inference.sh
coding_task/server/: config.py  intent_classifier.py  pyproject.toml  server.py
coding_task/train/: README.md  config.py  data_processor.py  main.py  metrics.py  model_loader.py  pyproject.toml  train_multiclass.sh  train_multilabel.sh  trainer.py
results/: BEST_multilabel_lora_r_256_epoch_50_batch_size_32.txt  README.md  xlmr_multiclass_lora_r_128_epoch_10.txt  xlmr_multiclass_lora_r_64_epoch_10.txt  xlmr_multilabel_lora_r_128_epoch_10.txt  xlmr_multilabel_lora_r_64_epoch_10.txt
results/BEST_atis_multilabel_xlmr_lora/: README.md  all_results.json  config.json  eval_results.json  id2label.json  label2id.json  test_results.json  train_results.json  trainer_state.json
results/BEST_atis_multilabel_xlmr_lora/checkpoint-2204/: README.md  rng_state.pth  scheduler.pt  trainer_state.json
results/BEST_atis_multilabel_xlmr_lora/checkpoint-2552/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
