[tool.poetry]
name = "zendesk-server"
version = "0.1.0"
description = "Zendesk Senior MLE Coding Challenge"
authors = ["Akshay Joshi akshay@akjo.tech"]
readme = "/coding_task/README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9, <=3.12.1"
fastapi = "^0.115.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"