[tool.poetry]
name = "zendesk-training"
version = "0.1.0"
description = "Zendesk Senior MLE Coding Challenge"
authors = ["Akshay Joshi akshay@akjo.tech"]
readme = "/coding_task/README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9, <=3.12.1"
dask = "^2025.4.0"
datasets = "^3.5.0"
peft = "^0.15.2"
evaluate = "^0.4.3"
torch = "^2.6.0"
transformers = "^4.51.3"
accelerate = "^1.6.0"
pandas = "^2.2.3"
wandb = "^0.19.10"
tensorboard = "^2.19.0"
scikit-learn = "^1.6.1"
pyarrow = "^19.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"